2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestylescheme.c: add the "description" property
	and make _gtk_source_style_scheme_get_matching_brackets_style and
	_gtk_source_style_scheme_get_current_line_color private since they are
	just for internal use.

	* gtksourceview/gtksourcebuffer.c: adapt to the above.
	* gtksourceview/gtksourceview.c: ditto.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/makefile.lang: fix highlighting of a rule
	following an empty rule.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/php.lang: many improvements (here-doc
	strings, numbers highlighting, string variables, ...) based on a patch
	by Eric Norige on bug #448513.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c:
	* gtksourceview/language-specs/desktop.lang:

	add comments for translators.

2007-08-22  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/python.lang: add "set" and "frozenset"
	builtins. Bug #469293.

2007-08-21  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: do not highlight $stderr in
	$stderrfoo. Bug #460652.

2007-08-20  Paolo Maggi  <paolo@gnome.org>

	* docs/reference/tmpl/buffer.sgml: GtkSourceTag class does not exist
	anymore

2007-08-20  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/docbook.lang: one more  keyoword
	ordering issue.

	* gtksourceview/language-specs/ruby.lang: highlight regexes and other
	minor fixes. Patch by Eric Norige, bug #467867.

2007-08-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (create_tag),
	(gtk_source_context_engine_attach_buffer): remember number
	of created tags and set priorities of newly created tags
	accordingly, so that all highlighting tags have priority
	lower than any other tags in buffer. It is not quite right