@@ -52,6 +52,11 @@ GtkSourceView
 
 </para>
 
+<!-- ##### ARG GtkSourceView:indent-width ##### -->
+<para>
+
+</para>
+
 <!-- ##### ARG GtkSourceView:insert-spaces-instead-of-tabs ##### -->
 <para>
 
